fix resources boxes overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1469,7 +1469,11 @@ a:hover img.microsoft .yellow { fill: #fbbc09; }
 
 .level-pro { background-color: #d81e5b; }
 
+.align-with-level { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; }
+
 .level-key { float: none; }
+
+.resource-title { width: 100%; }
 
 /*! FullCalendar v2.4.0 Stylesheet Docs & License: http://fullcalendar.io/ (c) 2015 Adam Shaw */
 .fc { direction: ltr; text-align: left; }
